# Wh_t_b__rd

./: .gitignore  CMakeLists.txt  README.md  Wh_t_b__rd.geany
cmake/: PCH.cmake  debugTarget.cmake
include/: base_common.hh  wh_t_b__rd.hh  whtbrd_base.hh  whtbrd_common.hh  whtbrd_show.hh  whtbrd_startup.hh
plugins/: CMakeLists.txt
plugins/base/: CMakeLists.txt  base.cc  base.hh
plugins/base/inc/: base.hh  base_common.hh
plugins/base/src/: base.cc
plugins/common/: CMakeLists.txt  Readme.txt  common.cc  common.hh  show.cc
plugins/dummy/: CMakeLists.txt  dummy.cc  dummy.hh
plugins/plug1/: CMakeLists.txt  plug1.cc  plug1.hh
plugins/workbench/: CMakeLists.txt  comselwid.cc  comselwid.hh  editCmd.cc  editCmd.hh  fullscreen.cc  fullscreen.hh  mainwindow.cc  mainwindow.hh  preview.cc  preview.hh  workbench.cc  workbench.hh
starter/: CMakeLists.txt  main.cc  main.hh
starter/include/: main.hh
starter/src/: main.cc  module.cc
startup/: CMakeLists.txt  main.cc  startup.hh
startup/inc/: startup.hh
startup/src/: main.cc
whtbrd/: CMakeLists.txt  splash.cc  splash.hh  splash2.xcf  startup.cc  startup.hh  startup.qrc
